# gr-ofdm_testbed

./: CMakeLists.txt  MANIFEST.md  gitignore.txt
apps/: CMakeLists.txt
docs/: CMakeLists.txt  README.ofdm_testbed
examples/: ofdm.py  ofdmber.grc  p2p.grc  p2p.py  p2p_RX.grc  p2p_tx.grc  p2p_tx.py  png.grc  png.py  test_BER.grc  test_BER.py  test_BER_epy_block_0.py  top_block.py
grc/: CMakeLists.txt  ofdm_testbed_ber.block.yml  ofdm_testbed_ber_pattern_generator.block.yml  ofdm_testbed_bpsk_demapper.block.yml  ofdm_testbed_bpsk_mapper.block.yml  ofdm_testbed_byte_to_bit.block.yml  ofdm_testbed_image_vector_source.block.yml  ofdm_testbed_primary_tx_control.block.yml  ofdm_testbed_receiver_control_p2p.block.yml  ofdm_testbed_zero_elimination.block.yml
lib/: CMakeLists.txt  ber_impl.cc  ber_impl.h  ber_pattern_generator_impl.cc  ber_pattern_generator_impl.h  bpsk_demapper_impl.cc  bpsk_demapper_impl.h  bpsk_mapper_impl.cc  bpsk_mapper_impl.h  byte_to_bit_impl.cc  byte_to_bit_impl.h  image_vector_source_impl.cc  image_vector_source_impl.h  primary_tx_control_impl.cc  primary_tx_control_impl.h  qa_ber.cc  qa_ber_pattern_generator.cc  receiver_control_p2p_impl.cc  (+3 more)
python/ofdm_testbed/bindings/: CMakeLists.txt  ber_pattern_generator_python.cc  bpsk_mapper_python.cc  byte_to_bit_python.cc  failed_conversions.txt  python_bindings.cc  receiver_control_p2p_python.cc  zero_elimination_python.cc
python/ofdm_testbed/bindings/docstrings/: ber_pattern_generator_pydoc_template.h  bpsk_mapper_pydoc_template.h  image_vector_source_pydoc_template.h  primary_tx_control_pydoc_template.h  zero_elimination_pydoc_template.h
(+22 files in other folders)
